appfunctions/appfunctions-compiler/src/test/test-data/input/entrypoints/invalid/EmptyAppFunctionEntryPoint.KT
package com.testdata

import androidx.appfunctions.AppFunctionService
import androidx.appfunctions.AppFunctionEntryPoint

@AppFunctionEntryPoint("MySimpleService", "app_functions_v2.xml")
abstract class EmptyAppFunctionEntryPoint: AppFunctionService() {

}
